@@ -51,7 +51,6 @@ requires = [
     'alabaster>=0.7,<0.8',
     'imagesize',
     'requests>=2.0.0',
-    'sphinxcontrib-websupport',
     'typing',
     'setuptools',
 ]
@@ -59,6 +58,9 @@ extras_require = {
     # Environment Marker works for wheel 0.24 or later
     ':sys_platform=="win32"': [
         'colorama>=0.3.5',
+    ],
+    'websupport': [
+        'sphinxcontrib-websupport',
     ],
     'test': [
         'pytest',
